Obnam NEWS
==========

This file summarizes changes between releases of Obnam.

Versioe 1.5, released UNRELEASED
--------------------------------

Bug fixes:

* Terminal progress reporting now updated only every 0.1 seconds,
  instead of 0.01 seconds, to reduce terminal emulator CPU usage.
  Reported by Neal Becker.

Version 1.4, released 2013-03-16
--------------------------------

* The``ls` command now takes filenames as (optional) arguments, instead
  of a list of generations. Based on patch by Damien Couroussé.
* Even more detailed progress reporting during a backup.
* Add --fsck-skip-generations option to tell fsck to not check any
  generation metadata.
* The default log level is now INFO, instead of DEBUG. This is to be
  considered a quantum leap in the continuing rise of the maturity level
  of the software. (Actually, the change is there just to save some
  disk space and I/O for people who don't want to be involved in Obnam
  development and don't want to have massive log files.)
* The default sizes for the `lru-size` and `upload-queue-size` settings
  have been reduced, to reduce the memory impact of Obnam.
* `obnam restore` now reports transfer statistics at the end, similarly
  to what `obnam backup` does. Suggested by "S. B.".

Bug fixes:

* If listing extended attributes for a filesystem that does not support
  them, Obnam no longer crashes, just silently does not backup extended
  attributes. Which aren't there anyway.
* A bug in handling stat lookup errors was fixed. Reported by
  Peter Palfrader. Symptom: `AttributeError: 'exceptions.OSError'
  object has no attribute 'st_ino'` in an error message or log file.
* A bug in a restore crashing when failing to set extended attributes
  on the restored file was fixed. Reported by "S. B.".
* Made it clearer what is happening when unlocking the repository due to
  errors, and fixed it so that a failure to unlock is also an error.
  Reported by andrewsh.